[Fix #620] Natsuiro: No wrap for ship levels

--- a/src/pages/devtools/themes/natsuiro/natsuiro.css
+++ b/src/pages/devtools/themes/natsuiro/natsuiro.css
@@ -942,6 +942,7 @@
 	float:left;
 	font-size:11px;
 	color:#ffffff;
+	white-space:nowrap;
 }
 .module.fleet .lship .ship_hp_text {
 	width:50px;
